<resources>
    <string name="app_name">CrossRoads</string>
    <string name="credits"><big>I would like to <b>thank</b></big></string>
    <string name="creditnames">All my friends and the members of the <u>Android techies society</u> who helped me with this application.</string>
    <string name="specialthanks"><b>Also Special Thanks and respect to my mentor-</b></string>
    <string name="mentorname">
        <big><b>Mr.Mukesh Sahu</b></big>
    </string>
    <string name="apprection">
        Who helped me a lot with this application and also inspired me in life.
</string>
    <string name="contactpage_title">WRITE TO ME AT:</string>
    <string name="for_any_queries_and_suggestions_about_the_application_send_them_in_through_the_feedback_page">FOR ANY QUERIES AND SUGGESTIONS ABOUT THE APPLICATION, SEND THEM IN THROUGH THE FEEDBACK PAGE.</string>
    <string name="EMAIL">heathc2098@gmail.com</string>
</resources>