<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel_contactus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".overflow.contact_us"
    android:background="@drawable/contact">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_alignBottom="@+id/scrollView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/contactpage_title"
                android:id="@+id/textcontact_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/EMAIL"
                android:id="@+id/textcontact_mail"
                android:layout_marginTop="10dp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/for_any_queries_and_suggestions_about_the_application_send_them_in_through_the_feedback_page"
                android:id="@+id/textcontact_info"
                android:layout_marginTop="20dp"
                android:textColor="#000000"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
